# morlock

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: dropbox.rs  main.rs  utils.rs
tests/: cli.rs
zig/: README.md  build.zig
zig/src/: dropbox.zig  main.zig
