[package]
name = "morlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
dirs = "4.0.0"
walkdir = "2.3.2"
size = "0.4"
bytesize = { version = "1.1.0", features = ["serde"] }
xattr = "0.2.3"
rust-ini = "0.18.0"
base64 = "0.13.1"
