[package]
name = "morlock"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dirs = "5.0.1"
walkdir = "2.3.2"
size = "0.4"
bytesize = { version = "1.1.0", features = ["serde"] }
xattr = "1.3.1"
rust-ini = "0.21.0"
base64 = "0.22.1"
