[package]
name = "morlock"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
walkdir = "2.5"
xattr = "1.6"
rust-ini = "0.21"
base64 = "0.22"
